[tool.poetry]
name = "stable-diffusion-webui-docker"
version = "0"
repository = "https://github.com/kalaspuff/stable-diffusion-webui-controlnet-docker"
homepage = "https://huggingface.co/spaces/carloscar/stable-diffusion-webui-controlnet-docker"
description = "Build configuration for Docker to set up AUTOMATIC1111's Stable Diffusion WebUI + Mikubill's ControlNet extension to run on a GPU-enabled server."
authors = ["Carl Oscar Aaro <hello@carloscar.com"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
triton = { version = ">=2.0.0a2", allow-prereleases = true, markers = "platform_machine == 'x86_64' and platform_system == 'Linux'" }
torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.1%2Bcu117-cp310-cp310-linux_x86_64.whl" }
numexpr = { version = "^2.8.0" }
